Tried fixing bullet not aligning in Chrome/IE

--- a/style.css
+++ b/style.css
@@ -26,19 +26,16 @@ body {
     font-size: 32px;
 }
 
-.ol.li {
-    text-align: center;
-}
-
 h2 {
     text-align: center;
 }
 
 ol {
     text-align: center;
+    list-style-position: inside;
 }
 
 ul {
     text-align: center;
-
+    list-style-position: inside;
 }
